# Computer_Vision

./: .gitignore  CMakeLists.txt  GLCM.h  GLCM_result.csv  adaptiveThreshold.h  alphaChannel.h  boxFilter.h  calGLCM.h  gaussFilter.h  histEqual.h  main.cpp
img/threshold/: threshold_11_2.txt  threshold_12.pixel.txt  threshold_12_2.pixel.txt  threshold_12_2.thres.txt  threshold_12_3.thres.txt  threshold_12_4.pixel.txt  threshold_12_4.thres.txt  threshold_13.pixel.txt  threshold_13_2.pixel.txt  threshold_13_2.thres.txt  threshold_13_3.pixel.txt  threshold_13_3.thres.txt  threshold_13_4.pixel.txt  threshold_13_4.thres.txt  threshold_14.pixel.txt  threshold_14_2.pixel.txt  threshold_14_2.thres.txt  threshold_14_3.pixel.txt  threshold_14_3.thres.txt  threshold_14_4.pixel.txt  threshold_14_4.thres.txt  threshold_15.pixel.txt  threshold_15_2.pixel.txt  threshold_15_2.thres.txt  threshold_15_3.pixel.txt  threshold_15_3.thres.txt  threshold_15_4.pixel.txt  threshold_15_4.thres.txt  threshold_16.pixel.txt  threshold_16_2.pixel.txt  threshold_16_2.thres.txt  threshold_16_3.pixel.txt  threshold_16_3.thres.txt  threshold_16_4.thres.txt
python/: AdaptiveThreshold.ipynb  GLCM.ipynb  MakeImgData.ipynb
python/.ipynb_checkpoints/: AdaptiveThreshold-checkpoint.ipynb  GLCM-checkpoint.ipynb
